# graft

./: .copier-answers.yml  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  0001-Implement-graft-resolve-command-with-hybrid-error-ha.patch  AGENTS.md  CLAUDE.md  CONTINUE_HERE.md  Cargo.toml  Dockerfile  GAP_ANALYSIS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS.md  Makefile  PHASE_8_IMPLEMENTATION.md  PLAN.md  PR_DESCRIPTION.md  README.md  README.prompt.md  READY_TO_IMPLEMENT.md  SESSION_LOG_2026-01-03.md  STATUS-BAR-SUMMARY.md  TASKS.md  TODO.md  continue-here.md  dvc.yaml  graft.config.yaml  graft.yaml  knowledge-base.yaml  pr-description.md  pyproject.toml  tasks.md  template-status.md  test-validation.sh
.claude/: SETUP_GUIDE.md  settings.json
.githooks/: pre-commit
crates/graft-cli/: Cargo.toml
crates/graft-cli/src/: completers.rs  main.rs
crates/graft-cli/tests/: integration_test.rs
crates/graft-common/: Cargo.toml
crates/graft-common/src/: command.rs  config.rs  git.rs  lib.rs  process.rs  runs.rs  runtime.rs  state.rs
crates/graft-core/: Cargo.toml
crates/graft-core/src/: domain.rs  error.rs  lib.rs
crates/graft-engine/: Cargo.toml
crates/graft-engine/src/: command.rs  config.rs  dependency_graph.rs  domain.rs  error.rs  lib.rs  lock.rs  management.rs  mutation.rs  query.rs  resolution.rs  scion.rs  sequence.rs  snapshot.rs  state.rs  template.rs  validation.rs
crates/graft-engine/tests/: integration_test.rs  test_lock_file.rs
crates/grove-cli/: Cargo.toml
crates/grove-cli/src/: main.rs  tui.rs  tui_tests.rs
crates/grove-cli/src/state/: cache.rs  discovery.rs  mod.rs  query.rs
crates/grove-cli/src/tui/: app.rs  command_exec.rs  command_line.rs  formatting.rs  header.rs  hint_bar.rs  mod.rs  overlays.rs  prompt.rs  render.rs  repo_detail.rs  repo_list.rs  scroll_buffer.rs  status_bar.rs  tab_changes.rs  tab_commands.rs  tab_state.rs  tabs.rs  tests.rs  text_buffer.rs  transcript.rs
crates/grove-cli/tests/: integration_test.rs  test_command_dispatch.rs  test_graft_discovery.rs  test_state_panel.rs
crates/grove-engine/: Cargo.toml
crates/grove-engine/src/: config.rs  git.rs  registry.rs  service.rs
docs/: CLI_REFERENCE.md  CONFIGURATION.md  INFO_ARCHITECTURE.md  NAVIGATION.md  README.md  agents.md  architecture.md  claude-skills.md  claude-skills.prompt.md  cli-reference.md  cli-spec.md  command-reference.md  command-reference.prompt.md  concepts.md  configuration.md  configuration.prompt.md  development.md  dvc-integration.md  faq.md  getting-started.md  getting-started.prompt.md  github-actions-setup.md  graft-yaml-reference.md  grove-overview.md  how-it-works.md  how-it-works.prompt.md  implementation-strategy.md  index.md  philosophy-of-design.md  project-overview.md  project-overview.prompt.md  quality-standards.md  structure.md  testing-strategy.md  troubleshooting.md  troubleshooting.prompt.md  tutorial.md  use-cases.md  use-cases.prompt.md  workflows.md
grove/: .copier-answers.yml  Cargo.toml  PHASE1-SUMMARY.txt  README.md  STATUS-BAR-PHASE1-COMPLETE.md  TEMPLATE_STATUS.md  knowledge-base.yaml
grove/.github/workflows/: ci.yml
grove/crates/grove-core/: Cargo.toml
grove/crates/grove-core/src/: domain.rs  lib.rs  traits.rs
grove/crates/grove-engine/: Cargo.toml
grove/crates/grove-engine/src/: config.rs  git.rs  lib.rs  registry.rs
grove/docs/: README.md  agents.md  user-guide.md
grove/docs/design/: state-integration-initial.md
grove/docs/grove/implementation/: adr-001-git-status-implementation.md  architecture-overview.md
grove/docs/grove/planning/: roadmap.md
grove/src/: lib.rs  main.rs  tui.rs  tui_tests.rs
grove/src/state/: cache.rs  discovery.rs  mod.rs  query.rs
grove/tests/: integration_test.rs  test_command_dispatch.rs  test_graft_discovery.rs
grove/tests/common/: mod.rs
notes/: 2025-12-23-initialization.md  2025-12-24-initialization.md  2025-12-26-initial-setup.md  2025-12-26-template-as-dependency.md  2025-12-27-error-handling-improvements.md  2026-01-01-upgrade-mechanisms.md  2026-01-03-python-implementation-plan.md  2026-01-03-specification-sync.md  2026-01-04-information-architecture-analysis.md  2026-01-04-meta-knowledge-base-evaluation.md  2026-01-05-ci-cd-design.md  2026-01-05-design-improvements-analysis.md  2026-01-05-documentation-improvements-summary.md  2026-01-05-evolution-brainstorming.md  2026-01-05-implementation-review.md  2026-01-05-meta-knowledge-base-compliance-analysis.md  2026-01-05-spec-gap-analysis.md  2026-01-07-ui-architecture-brainstorming.md  2026-01-12-dependency-management-exploration.md  2026-01-31-flat-only-dependency-analysis.md  2026-01-31-one-level-dependency-exploration.md  2026-02-06-grove-vertical-slices.md  2026-02-06-workspace-ui-exploration.md  2026-02-07-grove-workflow-hub-primitives.md  2026-02-08-binary-architecture-and-composition.md  2026-02-08-implementation-language-and-repo-structure.md  2026-02-08-status-check-syntax-exploration.md  2026-02-09-rust-starter-exploration.md  2026-02-10-grove-slice-1-implementation.md  2026-02-10-grove-slice-1-improvement-plan.md  2026-02-10-grove-slice-1-review-phase-2.md  2026-02-10-grove-slice-1-review.md  2026-02-11-path-display-improvements.md  2026-02-11-slice-1-implementation-critique.md  2026-02-11-slice-1-review.md  2026-02-12-command-dispatch-critique.md  2026-02-12-command-dispatch-improvements-plan.md  2026-02-12-final-critique.md  2026-02-12-phase-1-complete.md  2026-02-12-phase-1-final-review.md  (+48 more)
orig-docs/: implementation-strategy.md  user-journeys.md
schemas/: graft.schema.json  policy.schema.json
scripts/: ensure_llm.py  entrypoint.sh  find_uses.py  generate_dvc.py  install-hooks.sh  iterate.sh  list-slices.sh  pack_prompt.py  render_llm.sh  setup.sh  test.sh  validate.py  verify.sh
status/: COMPLETE_WORKFLOW.md  PHASE_8_IMPLEMENTATION.md  README.md  gap-analysis.md  implementation.md  phase-8.md  workflow-validation.md
tests/: __init__.py  conftest.py  conftest_container.py  test_container_transformers.py  test_dvc_orchestrator.py  test_dvc_scaffold.py  (+7 more)
(+451 files in other folders)
