[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
# External dependencies
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
chrono = "0.4"
gix = "0.66"
ratatui = "0.29"
crossterm = "0.28"
shellexpand = "3"
shell-words = "1.1"
unicode-width = "0.1"
wait-timeout = "0.2"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.42", features = ["process", "io-util", "rt", "sync", "time"] }
ansi-to-tui = "6.0"
regex = "1"
indexmap = { version = "2", features = ["serde"] }

# Internal crates
grove-core = { path = "crates/grove-core" }
grove-engine = { path = "crates/grove-engine" }
graft-core = { path = "crates/graft-core" }
graft-engine = { path = "crates/graft-engine" }
graft-common = { path = "crates/graft-common" }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
unnecessary_wraps = "allow"
