[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graff"
version = "0.0.1"
description = "Graft proposal starter — auditable file-first derivations"
authors = [{name="Graft Authors"}]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "typer>=0.12.3",
  "pyyaml>=6.0.1",
  "jsonschema>=4.21.1",
  "markdown-it-py>=3.0.0",
  "rich>=13.7.0",
  "jinja2>=3.1.0",
  "dvc>=3.0.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.1.9",
  "mypy>=1.8.0",
  "pre-commit>=3.6.0",
  "types-PyYAML>=6.0.0",
]

[project.scripts]
graft = "graft.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
]
ignore = [
  "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
