[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
gix = "0.66"
ratatui = "0.29"
crossterm = "0.28"
shellexpand = "3"
wait-timeout = "0.2"
log = "0.4"
env_logger = "0.11"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow common patterns that pedantic flags
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
unnecessary_wraps = "allow"

[package]
name = "grove"
version = "0.1.0"
edition = "2021"
description = "Multi-repo workspace manager with graft awareness"
license = "MIT"
authors = ["Your Name <you@example.com>"]

[dependencies]
grove-core = { path = "crates/grove-core" }
grove-engine = { path = "crates/grove-engine" }
anyhow = { workspace = true }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
shellexpand = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
