[package]
name = "graft-common"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
wait-timeout = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
