[package]
name = "graft-engine"
version = "0.1.0"
edition = "2021"
description = "Business logic for Graft"
license = "MIT"

[dependencies]
graft-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
