[package]
name = "grove-engine"
version = "0.1.0"
edition = "2021"
description = "Business logic for Grove"
license = "MIT"
authors = ["Your Name <you@example.com>"]

[dependencies]
grove-core = { workspace = true }
graft-common = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
gix = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
